# SkyStone

./: build.common.gradle  build.gradle  gradle.properties
TeamCode/: CMakeLists.txt  build.gradle  build.release.gradle
TeamCode/src/main/: AndroidManifest.xml
TeamCode/src/main/assets/: CustomSkystoneDetector.tflite  labelmap.txt
TeamCode/src/main/cpp/: Cache.cpp  Cache.h  Log.h  Main.cpp  Math.h
TeamCode/src/main/cpp/robot/: Encoders.cpp  Encoders.h  EncodersDelegate.cpp
TeamCode/src/main/java/net/gearmaniacs/teamcode/: LoadNativeLibrary.java  RobotPos.java  RobotPos.kt  TeamOpMode.kt  TeamRobot.kt
TeamCode/src/main/java/net/gearmaniacs/teamcode/autonomous/: AbstractAuto.kt  AutoPath.kt  MotionProfileTuner.kt  MotionProfilingTest.kt  OpenCvStoneFollower.kt  OpenCvTest.kt  PathAuto.kt  PathFollower.kt  PathPlanner.kt  ProMotionPlusMaxUltra2Elite.kt  ProfileSpeedHelper.kt  SimpleAbstractAuto.kt  StoneFollowerMecanum.kt  TensorflowTest.kt  TestingGyro.kt  TrackWidthTuner.kt  VuforiaTest.kt
TeamCode/src/main/java/net/gearmaniacs/teamcode/detector/: OpenCvManager.kt  PreviewSurfaceView.kt  Recognition.kt  SkystoneDetector.java  SkystoneDetector.kt  StoneDetector.kt  TFLiteClassifier.kt  VuforiaManager.kt
TeamCode/src/main/java/net/gearmaniacs/teamcode/drive/: DashboardUtil.java  Drive.kt  MecanumDrive.kt  MecanumDriveBase.kt  RealTimeMotionProfiler.kt
TeamCode/src/main/java/net/gearmaniacs/teamcode/milkshake/: CurvePoint.kt  Milkshake.kt  (+1 more)
TeamCode/src/main/java/org/openftc/opencvrepackaged/: MD5.java
TeamCode/src/main/res/xml/: teamwebcamcalibrations.xml
(+166 files in other folders)
